[package]
name = "reminders"
description = "A periodical reminder program using desktop notifications"
readme = "README.md"
license = "MIT"
repository = "https://github.com/chibby0ne/reminders"
version = "0.1.2"
authors = ["Antonio Gutierrez <chibby0ne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "^3"
clap = "~2.33.0"
